Make theming more generic, switch to single background image.

--- a/data/lightdm-webkit2-greeter.conf
+++ b/data/lightdm-webkit2-greeter.conf
@@ -12,7 +12,7 @@
 #
 
 [greeter]
-debug_mode          = false
+debug_mode          = true
 detect_theme_errors = true
 screensaver_timeout = 300
 secure_mode         = true
@@ -22,14 +22,14 @@ webkit_theme        = antergos
 
 #
 # [branding]
-# background_images = Path to directory that contains background images for use by themes.
-# logo              = Path to logo image for use by greeter themes.
+# background_image  = Path to background image.
+# logo              = Path to logo image.
 # user_image        = Default user image/avatar. This is used by themes for users that have no .face image.
 #
 # NOTE: Paths must be accessible to the lightdm system user account (so they cannot be anywhere in /home)
 #
 
 [branding]
-background_images = /usr/share/backgrounds
-logo              = /usr/share/lightdm-webkit/themes/antergos/img/antergos.png
-user_image        = /usr/share/lightdm-webkit/themes/antergos/img/antergos-logo-user.png
+background_image = /usr/share/lightdm-webkit/themes/antergos/img/background.jpg
+logo              = /usr/share/lightdm-webkit/themes/antergos/img/panel-header-icon.svg
+user_image        = /usr/share/lightdm-webkit/themes/antergos/img/user-icon.svg
